jena-shex/src/test/files/spec/negativeStructure/Cycle1Negation3.shex
# Negated circular reference to :S.
PREFIX :       <http://example.org/>

:S {
  :a NOT {
    :b @:S
  }
}
